--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,25 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>React App</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  <script type="text/javascript" src="bundle.js"></script></body>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8"/>
+    <title>StudyShare</title>
+
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet" />
+    <link href="css/jquery-ui.css" rel="stylesheet" />
+    <link href="css/font-awesome.min.css" rel="stylesheet"/>
+</head>
+
+<body>
+<div id="app"></div>
+
+<script src="js/jquery-3.1.1.js"></script>
+<script src="js/jquery-ui.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="bundle.js"></script>
+
+
+</body>
+
 </html>
